K8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: splitwise
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      containers:
      - name: backend
        image:                #Need to add backend image name here
        ports:
        - containerPort: 5000
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
