K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splitwise-ingress
  namespace: splitwise
spec:
  tls:
  - hosts:
    - yourapp.com
    secretName: tls-secret
  rules:
  - host: yourapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
