K8s/network-policy.yaml
#Network Security- controls traffic between pods, only frontend can access backend pods. other pods does not  have access to the backend pod

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
  namespace: splitwise
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
